--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,21 @@
-.App {
-  text-align: center;
+.app{
+    display: flex;
+    justify-content: space-around;
+    height: 100vh;
+    align-items: center;;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.controls{
+    width: 40vw;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.box{
+    text-align: center;
+    width: 40vw;
+    height: 50vh;
+    background-color: rgb(21, 112, 192);
+    color: black;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.box p {
+    padding: 20vh;
 }
